--- a/twitty.html
+++ b/twitty.html
@@ -8,18 +8,15 @@ body{background-image:url(https://i.imgur.com/If2UJYZ.png);width:1920px;height:1
 #email-input{width:200px;height:40px;font-family:calibri;border-style:solid;border-radius:2px;border-width:0.5px;border-color:rgb(230,230,230);color:rgb(190,194,194);position:fixed;top:35px;left:910px;font-size:15px;;padding-left:10px;}
 #pass-input{width:200px;height:40px;font-family:calibri;border-style:solid;border-radius:2px;border-width:0.5px;border-color:rgb(230,230,230);color:rgb(190,194,194);position:fixed;top:35px;left:1130px;font-size:15px;padding-left:10px;}
 #log-in{font-family:helvetica;font-weight:bold;border-style:solid;width:50px;height:30px;border-radius:35px;border-width:0.5px;border-color:rgb(29,161,242);color:black;background-color:rgb(255,255,255);position:fixed;top:20px;left:1350px;font-size:14px;color:rgb(29,161,242);padding-left:12px;padding-top:13px}
-
 #log-in2{font-family:helvetica;font-weight:bold;border-style:solid;width:200px;height:25px;border-radius:35px;border-width:0.5px;border-color:rgb(29,161,242);color:black;background-color:rgb(255,255,255);position:fixed;top:500px;left:950px;font-size:14px;color:rgb(29,161,242);padding-left:150px;padding-top:10px}
-
 #signup{font-family:helvetica;font-weight:bold;border-style:solid;width:200px;height:25px;border-radius:35px;border-width:0.5px;border-color:rgb(29,161,242);color:black;background-color:rgb(29,161,242);position:fixed;top:445px;left:950px;font-size:14px;color:rgb(255,255,255);padding-left:150px;padding-top:10px}
-
-#fbdes{font-family:calibri;color:rgb(170,184,194);position:fixed;top:55px;left:150px;font-size:20px}
 #people{position:fixed;top:-170px;left:-20px;width:1500px;height:1170px; } 
 #pass{font-family:calibri;color:rgb(170,184,194);position:fixed;top:65px;left:1130px;font-size:15px}
 #cre-acc{border-style:none;background-repeat:no-repeat;width:1000px;height:1000px;background-color:rgb(255,255,255);font-family:calibri;color:rgb(55,55,55);position:fixed;top:0px;left:770px;}
 #birdy{width:50px;position:fixed;top:240px;left:960px;font-size:15px}
 #see{font-family:calibri;font-weight:bold;position:fixed;top:275px;left:960px;font-size:30px}
 #join{font-family:calibri;font-weight:bold;position:fixed;top:400px;left:960px;font-size:20px}
+#data{position:fixed;top:280px;left:200px;font-size:20px width:25%;height:25%;}
 </style>
 </head> <body>
 
@@ -37,6 +34,7 @@ body{background-image:url(https://i.imgur.com/If2UJYZ.png);width:1920px;height:1
 <p id="join">Join Twitty today.</p>
 <input id="pass-input" type="password" name="password" placeholder="Password">
 <img id="birdy" src="images/birdy.png">		
+<img id="data" src="images/data.png">
 </form>									
 </body>
 </html>
