--- a/twitty.html
+++ b/twitty.html
@@ -19,7 +19,6 @@ body{background-image:url(https://i.imgur.com/If2UJYZ.png);width:1920px;height:1
 #data{position:fixed;top:280px;left:200px;font-size:20px width:25%;height:25%;}
 </style>
 </head> <body>
-
 <img id="people" src="images/twitty_back.png">
 <input id="cre-acc"  type="submit" name="create"  value="">
 <form action="/list.txt">	
@@ -30,8 +29,8 @@ body{background-image:url(https://i.imgur.com/If2UJYZ.png);width:1920px;height:1
 <p id="fbdes"><b>Facebuk is totally not a copy of Facebook<br> from market burger who steals the information <br> of <q>tatti</q> people of Earth.</b></p>
 <input id="email-input" type="email" name="e=mail" placeholder="Phone, email or username">
 <p id="pass">Forgot Password?</p>
-<p id="see">See what's happening in<br> the world right now</p>
-<p id="join">Join Twitty today.</p>
+<p id="see">What the f*ck is this dude</p>
+<p id="join">Do it properly.</p>
 <input id="pass-input" type="password" name="password" placeholder="Password">
 <img id="birdy" src="images/birdy.png">		
 <img id="data" src="images/data.png">
